--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Mission MouthPossible - A fun and challenging game where you navigate through various mouth-themed obstacles and challenges."
     />
+    <meta
+      name="keywords"
+      content="game, mouth, teeth, dental, fun, challenge, browser game"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mission-mouthpossible.com/" />
+    <meta property="og:title" content="Mission MouthPossible" />
+    <meta
+      property="og:description"
+      content="A fun and challenging game where you navigate through various mouth-themed obstacles and challenges."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/assets/favicon.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mission-mouthpossible.com/" />
+    <meta property="twitter:title" content="Mission MouthPossible" />
+    <meta
+      property="twitter:description"
+      content="A fun and challenging game where you navigate through various mouth-themed obstacles and challenges."
+    />
+    <meta property="twitter:image" content="%PUBLIC_URL%/assets/favicon.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Mission MouthPossible</title>
